Fix sprite horizontal scroll bug

--- a/app/assets/stylesheets/application/tasks/military_justice_downsides.css.sass
+++ b/app/assets/stylesheets/application/tasks/military_justice_downsides.css.sass
@@ -14,6 +14,7 @@
       max-width: 219px
     .image
       margin-bottom: 1em
+      overflow: hidden
     .downside-name
       font-size: 1.5em
       color: $gray
