--- a/app/assets/stylesheets/application/tasks/ocupations.css.sass
+++ b/app/assets/stylesheets/application/tasks/ocupations.css.sass
@@ -13,6 +13,7 @@
     height: 575px
     +grid-column(4)
     .ocupation-image
+      overflow: hidden
       margin: 0 auto
       max-width: 219px
 
