--- a/app/assets/stylesheets/application/tasks/partners.css.sass
+++ b/app/assets/stylesheets/application/tasks/partners.css.sass
@@ -18,6 +18,7 @@
       +grid-column($columns: 2, $offset: 1)
     .partner-image
       margin: 0 auto
+      overflow: hidden
       &.meurio
         max-width: 77px
       &.ddh, &.gtnm
