--- a/app/assets/stylesheets/application/tasks/steps.css.sass
+++ b/app/assets/stylesheets/application/tasks/steps.css.sass
@@ -23,6 +23,7 @@
     .step-image
       margin: 0 auto
       margin-bottom: .5em
+      overflow: hidden
       &.steps-1-civil
         max-width: 59px
       &.steps-4-militares
